force-app/main/default/objects/IRPD__c/IRPD__c.object-meta.xml
<CustomObject>
    <label>IRPD</label>
    <nameField>
        <displayFormat>IRPD-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRPDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>