force-app/main/default/objects/IRPD__c/fields/AKTV__c.field-meta.xml
<CustomField>
    <fullName>AKTV__c</fullName>
    <label>AKTV</label>
    <length>64</length>
    <type>Text</type>
</CustomField>