force-app/main/default/objects/IRPD__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <length>64</length>
    <type>Text</type>
</CustomField>