force-app/main/default/objects/IRPD__c/fields/Employee_Sale__c.field-meta.xml
<CustomField>
    <fullName>Employee_Sale__c</fullName>
    <label>Employee @ Sale</label>
    <length>64</length>
    <type>Text</type>
</CustomField>