force-app/main/default/objects/IRPD__c/fields/Incremental_Revenue_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Revenue_Checkout__c</fullName>
    <label>Incremental Revenue @ Checkout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>