force-app/main/default/objects/IRPD__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>64</length>
    <type>Text</type>
</CustomField>