force-app/main/default/objects/IRPD__c/fields/Possible_Sales_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Possible_Sales_Checkout__c</fullName>
    <label># Possible Sales @ Checkout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>