force-app/main/default/objects/IRPD__c/fields/Reservation_Type__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Type__c</fullName>
    <label>Reservation Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>