force-app/main/default/objects/IRPD__c/fields/Shortterm_Longterm__c.field-meta.xml
<CustomField>
    <fullName>Shortterm_Longterm__c</fullName>
    <label>Shortterm/Longterm</label>
    <length>64</length>
    <type>Text</type>
</CustomField>