force-app/main/default/objects/IRPD__c/fields/Sold_Charges_CO__c.field-meta.xml
<CustomField>
    <fullName>Sold_Charges_CO__c</fullName>
    <label># Sold Charges @ CO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>