force-app/main/default/objects/IRPD__c/fields/Vehicle_Group_Driven__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Group_Driven__c</fullName>
    <label>Vehicle Group Driven</label>
    <length>64</length>
    <type>Text</type>
</CustomField>